feat: add playlist page. add bunch of types. adjust nav . adjust profile. add endpoints for db and spotify.

--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -4,6 +4,6 @@ $light_red: hsl(10%, 90%, 80%);
 $green: #1db954;
 $charcoal: #191414;
 
-$smallMargin: 10px;
-$mediumMargin: 25px;
-$bigMargin: 50px;
+$small_margin: 10px;
+$medium_margin: 25px;
+$big_smargin: 50px;
