--- a/components/Layout/Profile/Profile.module.scss
+++ b/components/Layout/Profile/Profile.module.scss
@@ -31,7 +31,10 @@
 .buttonContainer {
   display: flex;
   flex-direction: column;
-  padding: 0 10px 0px 0px;
+  padding:10px 15px;
+  .button {
+    align-self: flex-start;
+  }
 }
 
 .titleLabel {
@@ -39,24 +42,35 @@
   padding: 5px;
 }
 
-.icon {
-  color: $baby_blue;
-  cursor: pointer;
-  width: 20px !important;
-  height: 20px !important;
-  &:hover{
-    opacity: 0.8;
-  }
-}
-
 .profileContainer {
   display: inline;
   position: relative;
 }
 
+.icon {
+  cursor: pointer;
+  &:hover {
+    opacity: 0.5;
+  }
+}
+
 .iconProfile {
+  color: $baby_blue;
+  width: 20px !important;
+  height: 20px !important;
   z-index: -1;
-  padding: $mediumMargin $mediumMargin 0 $mediumMargin;
+}
+
+.backIconContainer {
+  padding: 15px 15px 0 15px;
+  width: fit-content;
+
+  .iconBack {
+    width: 25px !important;
+    color: $baby_blue !important;
+    height: 25px !important;
+    
+  }
 }
 
 .collapseBtn {
@@ -70,9 +84,5 @@
     .iconBack {
       color: $eggshell;
     }
-  }
-  .iconBack {
-    width: 15px !important;
-    height: 15px !important;
   }
 }
