feat: add playlist cover component. fetch playlists. adjust nav

--- a/components/PlaylistCover/PlaylistCover.module.scss
+++ b/components/PlaylistCover/PlaylistCover.module.scss
@@ -8,5 +8,28 @@
 }
 
 .titleContainer {
+  padding: 10px;
   background-color: $green;
+  display: flex;
+  column-gap: 10px;
+}
+
+.footerContainer {
+  display: flex;
+}
+
+.grow {
+  flex-grow: 1;
+}
+
+.containerRow {
+  padding: 10px;
+}
+
+.nameTitle {
+  font-size: 20px;
+}
+
+.contentContainer {
+
 }
