--- a/components/Layout/Nav/Nav.module.scss
+++ b/components/Layout/Nav/Nav.module.scss
@@ -9,7 +9,7 @@
     &:hover {
       opacity: 0.5;
     }
-    &:last-child {
+    &.disabled {
       cursor: auto;
       float: right;
       &:hover {
